--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "jquery": "^3.6.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.3",
