--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.29.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-barcode": "^1.4.6",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-to-print": "^2.14.12",
     "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4"
   },
