--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
+    "draft-js": "^0.11.7",
     "jquery": "^3.6.4",
     "moment": "^2.29.4",
     "node-sass": "^8.0.0",
@@ -15,6 +16,7 @@
     "react-barcode": "^1.4.6",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-helmet": "^6.1.0",
     "react-js-pagination": "^3.0.3",
     "react-moment": "^1.1.3",
