--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
     "draft-js": "^0.11.7",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.4",
     "moment": "^2.29.4",
     "node-sass": "^8.0.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-barcode": "^1.4.6",
     "react-bootstrap": "^2.7.2",
